# autogen-explorations

./: .gitignore  LICENSE  README.md  app_code_exec_agent_chat.py  app_code_exec_agent_chat_data.py  app_code_exec_agent_core.py  app_code_exec_agent_core_data.py  app_code_exec_direct.py  app_human_in_the_loop.py  app_human_in_the_loop_handoff.py  app_json_serialize_error.py  app_magentic_one.py  app_selector_group_chat.py  app_state.py  app_swarm_customer_support.py  app_swarm_lights_meals.py  app_swarm_lights_meals2.py  app_swarm_lights_meals_memory.py  app_swarm_stock_researchy.py  app_team.py  app_termination.py  app_tool_example.py  app_tool_multi_agent.py  app_tool_multi_agent_handoffs.py  app_tool_multi_agent_handoffs2.py  app_tool_omni_agent.py  app_web.py  app_web_lights_meals.py  batches.csv  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
app_web/: index.html
app_web/ts/: index.ts
app_web_lights_meals/scss/: index.scss
app_web_lights_meals/ts/: index.ts  tsconfig.json
auto_gen_explore/: config.py  memory.py
auto_gen_explore/app_web/: session.py  session_file_persistence.py  session_memory_persistence.py  session_with_memory.py
auto_gen_explore/plugins/: lights.py  meals.py  meals2.py  utils.py
